php-src/ext/pdo_sqlite/tests/bug_38253.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Warning: PDOStatement::fetchAll(): SQLSTATE[HY000]: General error: No fetch class specified in /root/php-src/ext/pdo_sqlite/tests/bug_38253.php on line 12

Warning: PDOStatement::fetchAll(): SQLSTATE[HY000]: General error: 1 no such table: classtypes in /root/php-src/ext/pdo_sqlite/tests/bug_38253.php on line 12
array(0) {
}

Warning: PDOStatement::fetchAll(): SQLSTATE[HY000]: General error: No fetch function specified in /root/php-src/ext/pdo_sqlite/tests/bug_38253.php on line 17

Warning: PDOStatement::fetchAll(): SQLSTATE[HY000]: General error: 1 no such table: classtypes in /root/php-src/ext/pdo_sqlite/tests/bug_38253.php on line 17
array(0) {
}